Day5_VPC_Networking_Database-Setup/nat.tf
resource "aws_eip" "nat" {
  
}
resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public.id 
}
