Day5_VPC_Networking_Database-Setup/vpc.tf
resource "aws_vpc" "name" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "my-vpc"
  }
}
