Day5_VPC_Networking_Database-Setup/routetable.tf
#public route table 
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.name.id
}

resource "aws_route" "public_internet" {
  route_table_id = aws_route_table.public_rt.id 
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.igw.id 
}

resource "aws_route_table_association" "public_association" {
  subnet_id = aws_subnet.public.id 
  route_table_id = aws_route_table.public_rt.id 
}

#private route table 
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.name.id 
}

resource "aws_route" "private_nat" {
  route_table_id = aws_route_table.private_rt.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.nat.id 
}

resource "aws_route_table_association" "private_assoc_1" {
  subnet_id      = aws_subnet.private_1.id
  route_table_id = aws_route_table.private_rt.id
}

resource "aws_route_table_association" "private_assoc_2" {
  subnet_id      = aws_subnet.private_2.id
  route_table_id = aws_route_table.private_rt.id
}
